@@ -2,6 +2,7 @@ package cn.ffcs.uoo.core.organization.controller;
 
 
 import cn.ffcs.uoo.base.common.annotion.UooLog;
+import cn.ffcs.uoo.base.common.tool.util.DateUtils;
 import cn.ffcs.uoo.base.common.tool.util.StringUtils;
 import cn.ffcs.uoo.base.controller.BaseController;
 import cn.ffcs.uoo.core.organization.entity.*;
@@ -9,10 +10,7 @@ import cn.ffcs.uoo.core.organization.service.*;
 import cn.ffcs.uoo.core.organization.service.impl.OrgServiceImpl;
 import cn.ffcs.uoo.core.organization.util.ResponseResult;
 import cn.ffcs.uoo.core.organization.util.StrUtil;
-import cn.ffcs.uoo.core.organization.vo.OrgCertVo;
-import cn.ffcs.uoo.core.organization.vo.OrgVo;
-import cn.ffcs.uoo.core.organization.vo.PageVo;
-import cn.ffcs.uoo.core.organization.vo.PsonOrgVo;
+import cn.ffcs.uoo.core.organization.vo.*;
 import com.baomidou.mybatisplus.mapper.Condition;
 import com.baomidou.mybatisplus.mapper.Wrapper;
 import com.baomidou.mybatisplus.plugins.Page;
@@ -23,10 +21,12 @@ import io.swagger.annotations.ApiOperation;
 import org.apache.solr.common.SolrInputDocument;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.MediaType;
+import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.stereotype.Controller;
+import sun.swing.StringUIClientPropertyKey;
 
 import javax.annotation.Resource;
 import java.util.ArrayList;
@@ -101,12 +101,15 @@ public class OrgController extends BaseController {
     @Autowired
     private OrgCertRelService orgCertRelService;
 
+    @Autowired
+    private JdbcTemplate jdbcTemplate;
+
 
     @ApiOperation(value = "新增组织信息-web", notes = "新增组织信息")
     @UooLog(value = "新增组织信息", key = "addOrg")
     @RequestMapping(value = "/addOrg", method = RequestMethod.POST)
-    public ResponseResult<Void> addOrg(@RequestBody OrgVo org){
-        ResponseResult<Void> ret = new ResponseResult<Void>();
+    public ResponseResult<TreeNodeVo> addOrg(@RequestBody OrgVo org){
+        ResponseResult<TreeNodeVo> ret = new ResponseResult<TreeNodeVo>();
         
         String msg = orgService.JudgeOrgParams(org);
         if(!StrUtil.isNullOrEmpty(msg)){
@@ -114,7 +117,7 @@ public class OrgController extends BaseController {
             ret.setMessage(msg);
             return ret;
         };
-        Wrapper orgTreeConfWrapper = Condition.create().eq("ORG_ID",org.getOrgRootId()).eq("STATUS_CD","1000");
+        Wrapper orgTreeConfWrapper = Condition.create().eq("ORG_TREE_ID",org.getOrgTreeId()).eq("STATUS_CD","1000");
         OrgTree orgTree  = orgTreeService.selectOne(orgTreeConfWrapper);
         if(orgTree == null){
             ret.setState(ResponseResult.PARAMETER_ERROR);
@@ -146,6 +149,12 @@ public class OrgController extends BaseController {
         }
 
         Org supOrg = orgService.selectById(org.getSupOrgId());
+        if(supOrg==null){
+            ret.setState(ResponseResult.PARAMETER_ERROR);
+            ret.setMessage("父节点为空");
+            return ret;
+        }
+
         String fullName = "";
         if(!StrUtil.isNullOrEmpty(supOrg.getFullName())){
             fullName = supOrg.getFullName()+"/"+org.getOrgName();
@@ -169,7 +178,9 @@ public class OrgController extends BaseController {
         newOrg.setFullName(fullName);
         newOrg.setCityTown(StrUtil.strnull(org.getCityTown()));
         newOrg.setOfficePhone(StrUtil.strnull(org.getOfficePhone()));
-        //newOrg.setFoundingTime();
+        if(!StrUtil.isNullOrEmpty(org.getFoundingTime())){
+            newOrg.setFoundingTime(DateUtils.getDatebystr(org.getFoundingTime(),"yyyy-MM-dd HH:mm:ss"));
+        }
         newOrg.setOrgScale(StrUtil.strnull(org.getOrgScale()));
         newOrg.setOrgLevel(StrUtil.strnull(org.getOrgLevel()));
         newOrg.setOrgPositionLevel(StrUtil.strnull(org.getOrgPositionLevel()));
@@ -186,10 +197,10 @@ public class OrgController extends BaseController {
                 Long orgTypeRefId = orgTypeRefService.getId();
                 OrgOrgtypeRel orgTypeRef = new OrgOrgtypeRel();
                 orgTypeRef.setOrgTypeRelId(orgTypeRefId);
-                orgTypeRef.setOrgId(org.getOrgId());
+                orgTypeRef.setOrgId(newOrg.getOrgId());
                 orgTypeRef.setOrgTypeId(orgType.getOrgTypeId());
                 orgTypeRef.setStatusCd("1000");
-                orgTypeRef.insert();
+                orgTypeRefService.add(orgTypeRef);
             }
         }
 
@@ -199,13 +210,13 @@ public class OrgController extends BaseController {
                 Long postId = orgPostRelService.getId();
                 OrgPostRel orgPostRel = new OrgPostRel();
                 orgPostRel.setOrgPostId(postId);
-                orgPostRel.setOrgId(org.getOrgId());
+                orgPostRel.setOrgId(newOrg.getOrgId());
                 orgPostRel.setPostId(post.getPostId());
                 orgPostRel.setStatusCd("1000");
-                orgPostRel.insert();
+                orgPostRelService.add(orgPostRel);
             }
         }
-       orgService.insert(newOrg);
+
 
         //org_ref 组织类别推导
         for(OgtOrgReltypeConf orgOrgRel : ogtOrgReftypeConfList){
@@ -216,39 +227,47 @@ public class OrgController extends BaseController {
                     Long orgPositionId = orgPositionRelService.getId();
                     OrgPositionRel orgPosition = new OrgPositionRel();
                     orgPosition.setOrgPositionId(orgPositionId);
-                    orgPosition.setOrgId(org.getOrgId());
+                    orgPosition.setOrgId(newOrg.getOrgId());
                     orgPosition.setOrgTreeId(orgOrgRel.getOrgTreeId());
                     orgPosition.setPositionId(position.getPositionId());
                     orgPosition.setStatusCd("1000");
-                    orgPosition.insert();
+                    orgPositionRelService.add(orgPosition);
                 }
             }
+
+
+            Wrapper orgReltypeConfWrapper = Condition.create()
+                    .eq("ORG_REL_TYPE_ID",orgOrgRel.getOrgRelTypeId())
+                    .eq("STATUS_CD","1000");
+            OrgRelType ort = orgRelTypeService.selectOne(orgReltypeConfWrapper);
 
 
 
             OrgRel orgRef = new OrgRel();
             Long orgRefId = orgRelService.getId();
             orgRef.setOrgRelId(orgRefId);
-            orgRef.setOrgId(org.getOrgId());
-            orgRef.setSupOrgId(org.getSupOrgId());
-            orgRef.setOrgRelTypeId(orgOrgRel.getOrgRelTypeId());
+            orgRef.setOrgId(newOrg.getOrgId());
+            orgRef.setParentOrgId(org.getSupOrgId());
+            orgRef.setRefCode(ort.getRefCode());
             orgRef.setStatusCd("1000");
-            orgRef.insert();
+            orgRelService.add(orgRef);
 
 
             //组织组织树关系
             Long orgOrgtreeRefId = orgOrgtreeRelService.getId();
             OrgOrgtreeRel orgOrgtreeRef = new OrgOrgtreeRel();
             orgOrgtreeRef.setOrgOrgtreeId(orgOrgtreeRefId);
-            orgOrgtreeRef.setOrgId(org.getOrgId());
+            orgOrgtreeRef.setOrgId(newOrg.getOrgId());
             orgOrgtreeRef.setOrgTreeId(orgOrgRel.getOrgTreeId());
             orgOrgtreeRef.setOrgBizName(org.getOrgName());
             orgOrgtreeRef.setStatusCd("1000");
-            orgOrgtreeRef.insert();
+            orgOrgtreeRelService.add(orgOrgtreeRef);
+
 
 
             //组织层级
-            Wrapper orgLevelWrapper = Condition.create().eq("ORG_TREE_ID",orgTree.getOrgTreeId())
+            Wrapper orgLevelWrapper = Condition.create()
+                    .eq("ORG_TREE_ID",orgTree.getOrgTreeId())
                     .eq("STATUS_CD","1000")
                     .eq("ORG_ID",org.getSupOrgId());
             List<OrgLevel> orgLevelList = orgLevelService.selectList(orgLevelWrapper);
@@ -258,11 +277,11 @@ public class OrgController extends BaseController {
                 Long  orgLevelId = orgLevelService.getId();
                 OrgLevel orgLevel = new OrgLevel();
                 orgLevel.setOrgLevelId(orgLevelId);
-                orgLevel.setOrgId(org.getOrgId());
+                orgLevel.setOrgId(newOrg.getOrgId());
                 orgLevel.setOrgLevel(lv);
                 orgLevel.setOrgTreeId(orgOrgRel.getOrgTreeId());
                 orgLevel.setStatusCd("1000");
-                orgLevel.insert();
+                orgLevelService.add(orgLevel);
             }
 
 
@@ -281,23 +300,32 @@ public class OrgController extends BaseController {
         }
 
         //新增组织证件
-        Wrapper orgCertWrapper = Condition.create()
-                .eq("ORG_ID",org.getOrgId())
-                .eq("STATUS_CD","1000");
-        List<OrgCertRel> orgCertRelcurList = orgCertRelService.selectList(orgCertWrapper);
+//        Wrapper orgCertWrapper = Condition.create()
+//                .eq("ORG_ID",newOrg.getOrgId())
+//                .eq("STATUS_CD","1000");
+//        List<OrgCertRel> orgCertRelcurList = orgCertRelService.selectList(orgCertWrapper);
         List<String> cerList = org.getCertIdList();
-        if(orgCertRelcurList == null){
+//        if(orgCertRelcurList == null){
+        if(cerList!=null && cerList.size()>0){
             for(String certId : cerList){
                 OrgCertRel orgCertRel = new OrgCertRel();
-                Long orgCertRelId = orgCertRel.getOrgCertId();
+                Long orgCertRelId = orgCertRelService.getId();
                 orgCertRel.setOrgCertId(orgCertRelId);
-                orgCertRel.setOrgId(org.getOrgId());
+                orgCertRel.setOrgId(newOrg.getOrgId());
                 orgCertRel.setCertId(Integer.valueOf(certId));
-                orgCertRel.insert();
+                orgCertRelService.add(orgCertRel);
+                //orgCertRel.insert();
             }
         }
+//        }
+        orgService.add(newOrg);
+        TreeNodeVo vo = new TreeNodeVo();
+        vo.setId(newOrg.getOrgId().toString());
+        vo.setPid(org.getSupOrgId().toString());
+        vo.setName(newOrg.getOrgName());
         ret.setState(ResponseResult.STATE_OK);
         ret.setMessage("新增成功");
+        ret.setData(vo);
         return ret;
     }
 
@@ -319,7 +347,7 @@ public class OrgController extends BaseController {
             ret.setMessage("组织标识不能为空");
             return ret;
         }
-        Wrapper orgTreeConfWrapper = Condition.create().eq("ORG_ID",org.getOrgRootId()).eq("STATUS_CD","1000");
+        Wrapper orgTreeConfWrapper = Condition.create().eq("ORG_TREE_ID",org.getOrgTreeId()).eq("STATUS_CD","1000");
         OrgTree orgTree  = orgTreeService.selectOne(orgTreeConfWrapper);
         if(orgTree == null){
             ret.setState(ResponseResult.PARAMETER_ERROR);
@@ -330,7 +358,8 @@ public class OrgController extends BaseController {
         List<Position> positionList = org.getPositionList();
         List<Post> postList = org.getPostList();
 
-        Wrapper orgWrapper = Condition.create().eq("ORG_ID",org.getOrgId())
+        Wrapper orgWrapper = Condition.create()
+                .eq("ORG_ID",org.getOrgId())
                 .eq("STATUS_CD","1000");
         Org o = orgService.selectOne(orgWrapper);
         if(o == null){
@@ -339,7 +368,9 @@ public class OrgController extends BaseController {
             return ret;
         }
         if(!"1000".equals(org.getStatusCd())){
-            Wrapper orgPer = Condition.create().eq("ORG_ID",org.getOrgId()).eq("STATUS_CD","1000");
+            Wrapper orgPer = Condition.create()
+                    .eq("ORG_ID",org.getOrgId())
+                    .eq("STATUS_CD","1000");
             int num = orgPersonRelService.selectCount(orgPer);
             if(num>0){
                 ret.setState(ResponseResult.STATE_ERROR);
@@ -356,13 +387,15 @@ public class OrgController extends BaseController {
             newOrg.setAreaCodeId(new Long(org.getAreaCodeId()));
         }
         newOrg.setOrgName(StrUtil.strnull(org.getOrgName()));
-        newOrg.setOrgCode(StrUtil.strnull(org.getOrgCode()));
+        //newOrg.setOrgCode(StrUtil.strnull(org.getOrgCode()));
         newOrg.setShortName(StrUtil.strnull(org.getShortName()));
         newOrg.setOrgNameEn(StrUtil.strnull(org.getOrgNameEn()));
-        newOrg.setFullName(StrUtil.strnull(org.getFullName()));
+        //newOrg.setFullName(StrUtil.strnull(org.getFullName()));
         newOrg.setCityTown(StrUtil.strnull(org.getCityTown()));
         newOrg.setOfficePhone(StrUtil.strnull(org.getOfficePhone()));
-        //newOrg.setFoundingTime();
+        if(!StrUtil.isNullOrEmpty(org.getFoundingTime())){
+            newOrg.setFoundingTime(DateUtils.getDatebystr(org.getFoundingTime(),"yyyy-MM-dd HH:mm:ss"));
+        }
         newOrg.setOrgScale(StrUtil.strnull(org.getOrgScale()));
         newOrg.setOrgLevel(StrUtil.strnull(org.getOrgLevel()));
         newOrg.setOrgPositionLevel(StrUtil.strnull(org.getOrgPositionLevel()));
@@ -372,17 +405,23 @@ public class OrgController extends BaseController {
         newOrg.setOrgContent(StrUtil.strnull(org.getOrgContent()));
         newOrg.setOrgDesc(StrUtil.strnull(org.getOrgDesc()));
         newOrg.setAddress(StrUtil.strnull(org.getAddress()));
-        newOrg.setUuid(StrUtil.getUUID());
+        //newOrg.setUuid(StrUtil.getUUID());
 
         //newOrg.updateById();
 
-        Wrapper orgTypeWrapper = Condition.create().eq("ORG_ID",org.getOrgId()).eq("STATUS_CD","1000");
+        Wrapper orgTypeWrapper = Condition.create()
+                .eq("ORG_ID",org.getOrgId())
+                .eq("STATUS_CD","1000");
         List<OrgOrgtypeRel> orgTypeRefCurList = orgTypeRefService.selectList(orgTypeWrapper);
 
-        Wrapper positionWrapper = Condition.create().eq("ORG_ID",org.getOrgId()).eq("STATUS_CD","1000");
+        Wrapper positionWrapper = Condition.create()
+                .eq("ORG_ID",org.getOrgId())
+                .eq("STATUS_CD","1000");
         List<OrgPositionRel> orgPositionCurList = orgPositionRelService.selectList(positionWrapper);
 
-        Wrapper postWrapper = Condition.create().eq("ORG_ID",org.getOrgId()).eq("STATUS_CD","1000");
+        Wrapper postWrapper = Condition.create()
+                .eq("ORG_ID",org.getOrgId())
+                .eq("STATUS_CD","1000");
         List<OrgPostRel> orgPostCurList = orgPostRelService.selectList(postWrapper);
 
 
@@ -400,10 +439,12 @@ public class OrgController extends BaseController {
                 }
                 if(!isExists){
                     OrgOrgtypeRel orgTypeRef = new OrgOrgtypeRel();
+                    Long orgTypeRelId = orgTypeRefService.getId();
                     orgTypeRef.setOrgId(org.getOrgId());
                     orgTypeRef.setOrgTypeId(ot.getOrgTypeId());
                     orgTypeRef.setStatusCd("1000");
-                    orgTypeRef.insert();
+                    orgTypeRef.setOrgTypeRelId(orgTypeRelId);
+                    orgTypeRefService.add(orgTypeRef);
                 }
             }
 
@@ -440,7 +481,7 @@ public class OrgController extends BaseController {
                     orgPosition.setOrgTreeId(orgTree.getOrgTreeId());
                     orgPosition.setPositionId(p.getPositionId());
                     orgPosition.setStatusCd("1000");
-                    orgPosition.insert();
+                    orgPositionRelService.add(orgPosition);
                 }
             }
 
@@ -475,7 +516,7 @@ public class OrgController extends BaseController {
                     orgPost.setPostId(p.getPostId());
                     orgPost.setOrgPostId(orgPostId);
                     orgPost.setStatusCd("1000");
-                    orgPost.insert();
+                    orgPostRelService.add(orgPost);
                 }
             }
             for(OrgPostRel op : orgPostCurList){
@@ -509,11 +550,11 @@ public class OrgController extends BaseController {
                 }
                 if(!isExists){
                     OrgCertRel orgCertRel = new OrgCertRel();
-                    Long orgCertRelId = orgCertRel.getOrgCertId();
+                    Long orgCertRelId = orgCertRelService.getId();
                     orgCertRel.setOrgCertId(orgCertRelId);
                     orgCertRel.setOrgId(org.getOrgId());
                     orgCertRel.setCertId(certVo.getCertId().intValue());
-                    orgCertRel.insert();
+                    orgCertRelService.add(orgCertRel);
                 }
             }
             for(OrgCertRel ocr : orgCertRelcurList){
@@ -534,7 +575,8 @@ public class OrgController extends BaseController {
             List<OrgRel> orList = orgRelService.getOrgRel(orgTree.getOrgTreeId().toString(),org.getOrgId().toString());
             for(OrgRel or : orList){
 
-                Wrapper orgTreeRelWrapper = Condition.create().eq("ORG_ID",org.getOrgId())
+                Wrapper orgTreeRelWrapper = Condition.create()
+                        .eq("ORG_ID",org.getOrgId())
                         .eq("STATUS_CD","1000")
                         .eq("ORG_TREE_ID",orgTree.getOrgTreeId());
                 List<OrgOrgtreeRel> orgOrgtreeRelList = orgOrgtreeRelService.selectList(orgTreeRelWrapper);
@@ -542,7 +584,8 @@ public class OrgController extends BaseController {
                     orgOrgtreeRelService.delete(ootr);
                 }
 
-                Wrapper orgLevelWrapper = Condition.create().eq("ORG_TREE_ID",org.getOrgTreeId())
+                Wrapper orgLevelWrapper = Condition.create()
+                        .eq("ORG_TREE_ID",orgTree.getOrgTreeId())
                         .eq("STATUS_CD","1000")
                         .eq("ORG_ID",org.getOrgId());
                 List<OrgLevel> orgLevelList = orgLevelService.selectList(orgLevelWrapper);
@@ -550,7 +593,8 @@ public class OrgController extends BaseController {
                     orgLevelService.delete(ol);
                 }
 
-                Wrapper orgPositionWrapper = Condition.create().eq("ORG_TREE_ID",org.getOrgTreeId())
+                Wrapper orgPositionWrapper = Condition.create()
+                        .eq("ORG_TREE_ID",orgTree.getOrgTreeId())
                         .eq("STATUS_CD","1000")
                         .eq("ORG_ID",org.getOrgId());
 
@@ -581,7 +625,7 @@ public class OrgController extends BaseController {
 
         }
         newOrg.setStatusCd("1000");
-        newOrg.updateById();
+        orgService.update(newOrg);
         ret.setState(ResponseResult.STATE_OK);
         ret.setMessage("更新成功");
         return ret;
@@ -597,14 +641,32 @@ public class OrgController extends BaseController {
     })
     @UooLog(value = "查询组织信息", key = "getOrg")
     @RequestMapping(value = "/getOrg", method = RequestMethod.GET)
-    public ResponseResult<OrgVo> getOrg(String orgId){
+    public ResponseResult<OrgVo> getOrg(String orgTreeId,String orgId){
         ResponseResult<OrgVo> ret = new ResponseResult<>();
         if(StrUtil.isNullOrEmpty(orgId)){
             ret.setState(ResponseResult.PARAMETER_ERROR);
             ret.setMessage("组织标识不能为空");
             return ret;
         }
-        Wrapper orgWrapper = Condition.create().eq("ORG_ID",orgId).eq("STATUS_CD","1000");
+        if(StrUtil.isNullOrEmpty(orgTreeId)){
+            ret.setState(ResponseResult.PARAMETER_ERROR);
+            ret.setMessage("组织树标识不能为空");
+            return ret;
+        }
+        //查看组织树是否存在
+        Wrapper orgTreeConfWrapper = Condition.create()
+                .eq("ORG_TREE_ID",orgTreeId)
+                .eq("STATUS_CD","1000");
+        OrgTree orgTree  = orgTreeService.selectOne(orgTreeConfWrapper);
+        if(orgTree == null){
+            ret.setState(ResponseResult.PARAMETER_ERROR);
+            ret.setMessage("组织树不存在");
+            return ret;
+        }
+
+        Wrapper orgWrapper = Condition.create()
+                .eq("ORG_ID",orgId)
+                .eq("STATUS_CD","1000");
         OrgVo org = orgService.selectOrgByOrgId(orgId);
         //Org org = orgService.selectById(orgId);
         if(StrUtil.isNullOrEmpty(org)){
@@ -613,13 +675,13 @@ public class OrgController extends BaseController {
             return ret;
         }
 
-        List<OrgType> orgTypeList = orgTypeService.getOrgTypeByOrgId(Integer.valueOf(orgId).longValue());
+        List<OrgType> orgTypeList = orgTypeService.getOrgTypeByOrgId(new Long(orgId));
         org.setOrgTypeList(orgTypeList);
         //组织岗位
-        List<Position> positionList = positionService.getOrgPositionByOrgId(Integer.valueOf(orgId).longValue());
+        List<Position> positionList = positionService.getOrgPositionByOrgId(new Long(orgId));
         org.setPositionList(positionList);
         //组织职位
-        List<Post> postList = postService.getOrgPostByOrgId(Integer.valueOf(orgId).longValue());
+        List<Post> postList = postService.getOrgPostByOrgId(new Long(orgId));
         org.setPostList(postList);
         //组织联系人
         List<PsonOrgVo> psonOrgVoList = orgContactRelService.getOrgContact(orgId);
@@ -645,24 +707,45 @@ public class OrgController extends BaseController {
     @UooLog(value = "查询组织关系列表分页", key = "getOrgRelPage")
     @RequestMapping(value = "/getOrgRelPage", method = RequestMethod.GET)
     @Transactional(rollbackFor = Exception.class)
-    public ResponseResult<Page<OrgVo>> getOrgRelPage(Integer orgRootId,
-                                                     Integer orgId,
+    public ResponseResult<Page<OrgVo>> getOrgRelPage(String orgRootId,
+                                                     String orgTreeId,
+                                                     String orgId,
                                                      Integer pageSize,
                                                      Integer pageNo){
         ResponseResult<Page<OrgVo>> ret = new ResponseResult<>();
-        if(StrUtil.isNullOrEmpty(orgRootId)){
+
+        if(StrUtil.isNullOrEmpty(orgTreeId)){
             ret.setState(ResponseResult.PARAMETER_ERROR);
-            ret.setMessage("组织根节点不能为空");
+            ret.setMessage("组织树标识不能为空");
             return ret;
         }
+
+//        if(StrUtil.isNullOrEmpty(orgRootId)){
+//            ret.setState(ResponseResult.PARAMETER_ERROR);
+//            ret.setMessage("组织根节点不能为空");
+//            return ret;
+//        }
         if(StrUtil.isNullOrEmpty(orgId)){
             ret.setState(ResponseResult.PARAMETER_ERROR);
             ret.setMessage("组织标识不能为空");
             return ret;
         }
+        Wrapper orgTreeConfWrapper = Condition.create()
+                .eq("ORG_TREE_ID",orgTreeId)
+                .eq("STATUS_CD","1000");
+        OrgTree orgTree  = orgTreeService.selectOne(orgTreeConfWrapper);
+        if(orgTree == null){
+            ret.setState(ResponseResult.PARAMETER_ERROR);
+            ret.setMessage("组织树不存在");
+            return ret;
+        }
+
         OrgVo orgVo = new OrgVo();
-        orgVo.setOrgRootId(orgRootId.toString());
-        orgVo.setOrgId(orgId.longValue());
+
+        orgVo.setOrgRootId(orgTree.getOrgId());
+        orgVo.setOrgId(new Long(orgId));
+        orgVo.setOrgTreeId(orgTree.getOrgTreeId());
+
         if(!StrUtil.isNullOrEmpty(pageNo)){
             orgVo.setPageNo(pageNo);
         }
@@ -712,18 +795,18 @@ public class OrgController extends BaseController {
     @UooLog(value = "查询组织额外信息", key = "getOrgExtByOrgId")
     @RequestMapping(value = "/getOrgExtByOrgId", method = RequestMethod.GET)
     @Transactional(rollbackFor = Exception.class)
-    public ResponseResult<HashMap<String,String>> getOrgExtByOrgId(String orgRootId, String orgId){
+    public ResponseResult<HashMap<String,String>> getOrgExtByOrgId(String orgTreeId,String orgRootId, String orgId){
         ResponseResult<HashMap<String,String>> ret = new ResponseResult<>();
         if(StrUtil.isNullOrEmpty(orgId)){
             ret.setState(ResponseResult.PARAMETER_ERROR);
             ret.setMessage("组织标识为空");
             return ret;
         }
-        if(StrUtil.isNullOrEmpty(orgRootId)){
-            ret.setState(ResponseResult.PARAMETER_ERROR);
-            ret.setMessage("组织树根节点标识为空");
-            return ret;
-        }
+//        if(StrUtil.isNullOrEmpty(orgRootId)){
+//            ret.setState(ResponseResult.PARAMETER_ERROR);
+//            ret.setMessage("组织树根节点标识为空");
+//            return ret;
+//        }
         HashMap<String,String> listMap = new HashMap<String,String>();
        // String fullName = orgService.getSysFullName(orgRootId,orgId);
         String followOrg = orgTreeService.getOrgTreeNameByOrgId(orgId);
